# ukb_dep_immunometabol

./: .gitattributes  LICENSE  README.md  pyproject.toml
.datalad/: config
replication_data/: FS_a2009s_labels.csv  JHU_labels.csv
ukb_dep_immunometabol/: README.md  main.py  ukbdep_cluster.py  ukbdep_corr_brain.py  ukbdep_corr_pheno.py  ukbdep_extract_data.py  ukbdep_sociodemo.py  ukbdep_supp_corr_brain.py  utils.py
ukb_dep_immunometabol/data/: FS_aseg_labels.csv  Schaefer200_17Networks_labels.csv  Tian_Subcortex_S2_7T.csv  Tian_Subcortex_S2_7T.nii  icd10_neurological.csv  lh.aparc.a2009s.annot  mni_aseg.mgz  rh.aparc.a2009s.annot  ukb_selected_fields.csv
ukb_dep_immunometabol/supp_analysis/: ukbdep_supp_cluster.py  ukbdep_supp_corr_pheno.py
ukb_dep_immunometabol/tasks/: analysis.py  data.py  plotting.py
