[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "ukb_dep_immunometabol"
authors = [
    {name = "Jianxiao Wu", email = "j.wu@fz-juelich.de"}
]
description = "Characterisation of depressive symptoms dimensions in UK Biobank"
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.11"
keywords = ["neuroimaging", "multimodal"]
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Topic :: Neuroscience :: Neuroimaging",
]
dependencies = [
    "matplotlib ~= 3.10.0",
    "nibabel ~= 5.3.2",
    "nilearn ~= 0.11.1",
    "numpy ~= 2.2.2",
    "pandas ~= 2.2.3",
    "Pillow ~= 12.1.0",
    "pycirclize ~= 1.9.1",
    "pydra ~= 1.0a",
    "scipy ~= 1.16.2",
    "scikit-learn ~= 1.5.2",
    "seaborn ~= 0.13.2",
    "statsmodels ~= 0.14.4",
]
dynamic = ["version"]

[project.scripts]
ukb_dep = "ukb_dep_immunometabol.main:main"

[project.urls]
repository = "https://github.com/jadecci/ukb_dep_immunometabol"

[tool.setuptools]
packages = ["ukb_dep_immunometabol"]

[tool.setuptools.dynamic]
version = {attr = "ukb_dep_immunometabol.VERSION"}
